# Go-Out-Hyd

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  SETUP.md  goout-hyd.html  index.html  package-lock.json  package.json  pyproject.toml  shipkit.json
.claude/: settings.local.json
.claude/commands/: generate_diagram.md  generate_landing_page.md  task_review.md  task_template.md  worktree.md
.cursor/rules/: cafeconnect-project.mdc  python-prefer-config-over-os-getenv.mdc
.windsurf/rules/: commenting-best-practices.md  nextjs-redirect-outside-try-catch.md  no-void-unused-variables.md  python-import-collections-abc-types.md  python-prefer-config-over-os-getenv.md
ai_docs/Razor_pay/: razorpay_integration_reference.md  web_integration.md
ai_docs/dev_templates/: cleanup.md  drizzle-rollback-workflow.md  generate_landing_page.md  ref.md  template_update_workflow.md  update_template_workflow.md
ai_docs/lesson_learned/: 01_master_idea_session.md  02_phase_1a_rag_cleanup_session.md  03_phase_1b_query_layer_and_shared_layout.md
ai_docs/prep/: app_name.md  app_pages_and_functionality.md  initial_data_schema.md  master_idea.md  roadmap.md  system_architecture.md  system_design.md  theme.html  ui_theme.md  wireframe.md
ai_docs/prep_templates/: theme-template.html
ai_docs/tasks/: 001_migrate_next_lint_to_eslint_cli.md  001_phase_1a_rag_cleanup_and_goout_setup.md  002_phase_1b_query_layer_and_shared_layout.md  002_remove_stripe_and_usage_tracking.md  003_phase_2_2_cafe_profile_page.md  004_phase_3_event_discovery.md  005_phase_4_partner_lead_capture.md  006_phase_5_landing_and_content_pages.md  007_phase_6_seo_and_documentation.md  008_phase_7_codebase_cleanup.md  009_frontend_ui_polish_color_system.md  010_homepage_layout_cleanup.md  011_razorpay_ticket_booking_integration.md  012_razorpay_go_live_production.md  013_ticket_qr_verification_page.md  014_local_admin_dashboard.md  015_event_organizer_contact_fields.md  016_on_demand_revalidation_production.md  017_order_summary_convenience_fee_gst.md  018_pre_launch_legal_and_checkout_no_gst.md  019_admin_password_auth_and_production_revalidation.md  020_event_organizer_platform_foundation.md  021_event_status_fixes_and_instagram.md  022_landing_page_rebrand.md  023_global_color_token_migration.md  024_about_page_content_and_ui_refresh.md  025_frontend_audit_week1_brand_violations_and_core_fixes.md  026_frontend_audit_week2_polish_and_cleanup.md
ai_docs/test_plans/: 018_pre_launch_manual_test_plan.md
apps/rag-gcs-handler/: main.py  pyproject.toml  requirements.txt
apps/rag-processor/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
apps/rag-processor/rag_processor/: __init__.py  audio_transcription.py  config.py  main.py
apps/rag-processor/rag_processor/models/: __init__.py  api_models.py  image_analysis_models.py  metadata_models.py
apps/rag-processor/rag_processor/services/: __init__.py  audio_processing_service.py  audio_transcription.py  database_service.py  document_processing_service.py  embedding_service.py  genai_utils.py  image_processing_service.py  processing_service.py  video_processing_service.py
apps/rag-processor/rag_processor/utils/: __init__.py  config_utils.py  content_router.py  error_handling.py  gcs_utils.py  image_utils.py  logging.py  prerequisite_utils.py  resource_manager.py  retry_utils.py  server.py  task_manager.py  token_utils.py  validation_utils.py
apps/rag-task-processor/: __init__.py  main.py  pyproject.toml
apps/web/: .env.example  .env.local.example  .gitignore  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package.json  shipkit.json  tailwind.config.ts
apps/web/.cursor/: mcp.json
apps/web/.cursor/rules/: nextjs-redirect-outside-try-catch.mdc  no-void-unused-variables.mdc
apps/web/app/: globals.css  layout.tsx  manifest.json  manifest.ts  not-found.tsx  robots.ts  sitemap.ts
apps/web/app/(admin)/: layout.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(protected)/: layout.tsx
apps/web/app/(public)/: layout.tsx  page.tsx
apps/web/app/actions/: admin.ts  auth.ts  chat.ts  documents.ts  event-leads.ts  history.ts  leads.ts  submit-event.ts  subscriptions.ts  tickets.ts  usage.ts
apps/web/components/: Logo.tsx  ScrollReveal.tsx  SidebarThemeSwitcher.tsx
apps/web/components/about/: TeamSection.tsx
apps/web/components/admin/: AdminHeader.tsx  AdminSidebar.tsx  CafeForm.tsx  CafeImagesManager.tsx  CancelEventButton.tsx  EventForm.tsx  (+14 more)
apps/web/contexts/: ChatStateContext.tsx  UsageContext.tsx  UserContext.tsx
apps/web/hooks/: index.ts  use-upload-queue.ts  use-usage-validation.ts  useChatAttachments.ts  useChatConversation.ts  useChatStreaming.ts  useDocumentDeletion.ts  useDocumentPolling.ts  useDocuments.ts
apps/web/lib/: app-utils.ts  attachments-client.ts  attachments.ts  auth.ts  chat-utils-client.ts  chat-utils.ts  document-utils.ts  documents.ts  email.ts  env.ts  error-categories.ts  error-formatting.ts  error-processing.ts  file-validation-constants.ts  file-validation.ts  google-cloud.ts  history.ts  metadata.ts  persistence.ts  processing-constants.ts  processing-utils.ts  razorpay.ts  revalidate-allowlist.ts  revalidate-production.ts  storage.ts  stripe-service.ts  stripe.ts  subscriptions.ts  tickets-qr.ts  upload-error-handling.ts  upload-queue.ts  usage-tracking-client.ts  usage-tracking.ts
apps/web/scripts/: migration-status.ts  rollback.ts  seed.ts  setup-storage-buckets.ts  setup-storage.ts
scripts/: EMBEDDING_MIGRATION_GUIDE.md  __init__.py  __main__.py  config_utils.py  deploy_gcs_handler_core.py  deploy_gcs_handler_dev.py  deploy_gcs_handler_prod.py  deploy_rag_processor_core.py  deploy_rag_processor_dev.py  deploy_rag_processor_prod.py  deploy_task_processor_core.py  deploy_task_processor_dev.py  deploy_task_processor_prod.py  deployment_config.py  error_handling.py  gcp_setup_core.py  gcp_utils.py  migrate_embeddings_v2.py  prerequisite_utils.py  retry_utils.py  setup_gcp_dev.py  setup_gcp_prod.py  update-helpers.py  validation_utils.py
scripts/utils/: __init__.py  env_loader.py
(+264 files in other folders)
