[project]
name = "rag-simple-template"
version = "0.1.0"
description = "RAG SaaS template with deployment scripts"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    # Dependencies needed for deployment scripts
    "huggingface-hub>=0.20.0", # For model downloads
    "hf-transfer>=0.1.9", # For fast HuggingFace downloads
    "requests>=2.32.0", # For HTTP requests
    "docling>=2.12.0", # For standard model downloader access in deployment scripts
    "tabulate>=0.9.0",
    # Google Cloud dependencies for setup scripts
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.18.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
]

[project.scripts]
# Deployment scripts (accessible from template root with PYTHONPATH=scripts)
deploy-rag-processor = "deploy_rag_processor:main"
deploy-queue-handler = "deploy_queue_handler:main"
setup-dev = "setup_gcp_dev:main"
setup-prod = "setup_gcp_prod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "apps/rag-processor/rag_processor", "apps/rag-gcs-handler", "apps/rag-task-processor"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "black>=25.1.0", 
    "mypy>=1.16.0",
    "pytest>=7.4.0",
    "types-requests>=2.32.4.20250611",
]
lint = [
    "ruff>=0.12.0",
    "black>=25.1.0",
    "mypy>=1.16.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["scripts", "apps/rag-processor"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E203", # whitespace before : (conflicts with black)
    "E501", # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "apps/rag-processor:scripts"
